package clack.message;

public enum MsgTypeEnum
{
    FILE,
    HELP,
    LISTUSERS,
    LOGIN,
    LOGOUT,
    OPTION,
    TEXT
}
