package clack.message;

public enum OptionEnum {
    CIPHER_KEY,
    CIPHER_NAME,
    CIPHER_ENABLE
}
